--- a/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
+++ b/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
@@ -86,7 +86,7 @@
         android:layout_width="171dp"
         android:layout_height="57dp"
         android:gravity="center"
-        android:text="@string/label_salario"
+        android:text="@string/label_salario_mensual"
         android:textColor="@color/black"
         android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -166,15 +166,15 @@
         android:onClick="abrirCalendario"
         android:text="@string/button_fecha_defecto"
         android:textColor="#A8000000"
-        app:cornerRadius="10dp"
         android:textSize="12dp"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.319"
-        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
+        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,TextSizeCheck" />
 
     <Button
         android:id="@+id/fechaFinal"
@@ -184,15 +184,15 @@
         android:onClick="abrirCalendarioFechaFinal"
         android:text="@string/button_fecha_defecto"
         android:textColor="#A8000000"
-        app:cornerRadius="10dp"
         android:textSize="12dp"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.426"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />
 
     <EditText
         android:id="@+id/diasTrabajados"
