[CONFIG] se realiza configuración en general para que la opción atras de los dispositivos no funcione si no que solo funcione con los botones de la aplicación, se realiza la configuración del formulario area

--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -42,7 +42,7 @@
         android:layout_width="105dp"
         android:layout_height="45dp"
         android:backgroundTint="#4CAF50"
-        android:text="@string/button_guardar_empleado"
+        android:text="@string/button_guardar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         android:layout_width="105dp"
         android:layout_height="45dp"
         android:backgroundTint="#F44336"
-        android:text="@string/button_cancelar_empleado"
+        android:text="@string/button_cancelar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
