--- a/app/src/main/res/layout/activity_area.xml
+++ b/app/src/main/res/layout/activity_area.xml
@@ -21,7 +21,8 @@
         app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.046"/>
+        app:layout_constraintVertical_bias="0.046"
+        tools:ignore="SpUsage,TextSizeCheck" />
 
     <ImageButton
         android:id="@+id/imageButtonMenu"
@@ -33,6 +34,124 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.026"
-        app:srcCompat="@drawable/iconmenu" />
+        app:srcCompat="@drawable/iconmenu"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/GuardarEmpleado"
+        android:layout_width="105dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#4CAF50"
+        android:text="@string/button_guardar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.942"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.980"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/CancelarEmpleado"
+        android:layout_width="105dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#F44336"
+        android:text="@string/button_cancelar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.550"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.980"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/EditarEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:backgroundTint="#2196F3"
+        android:text="@string/button_editar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.046"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/BorrarEmpleado"
+        android:layout_width="102dp"
+        android:layout_height="44dp"
+        android:backgroundTint="#F44336"
+        android:text="@string/button_borrar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.102"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/EstadoEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:backgroundTint="#FFC107"
+        android:text="@string/button_activar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.158"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.050"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.240">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_identificacion_empleado"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/input_codigo_area"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.240">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_nombre_empleado"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/input_nombre_area"
+            android:inputType="textCapSentences" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
