--- a/app/src/main/res/layout/activity_planilla_nomina.xml
+++ b/app/src/main/res/layout/activity_planilla_nomina.xml
@@ -38,7 +38,7 @@
 
   <TextView
       android:id="@+id/textView3"
-      android:layout_width="256dp"
+      android:layout_width="300dp"
       android:layout_height="33dp"
       android:gravity="center"
       android:text="@string/label_texto_documento_soporte"
@@ -48,7 +48,7 @@
       app:layout_constraintHorizontal_bias="0.496"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.17"
+      app:layout_constraintVertical_bias="0.187"
       tools:ignore="TextSizeCheck" />
 
   <ImageView
@@ -73,10 +73,10 @@
       android:text="@string/label_periodo_pago"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.058"
+      app:layout_constraintHorizontal_bias="0.052"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.289" />
+      app:layout_constraintVertical_bias="0.272" />
 
   <TextView
       android:id="@+id/textView12"
@@ -87,10 +87,10 @@
       android:text="@string/label_dias_trabajados"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.057"
+      app:layout_constraintHorizontal_bias="0.053"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.318" />
+      app:layout_constraintVertical_bias="0.301" />
 
   <TextView
       android:id="@+id/textView4"
@@ -101,10 +101,10 @@
       android:text="@string/label_salario"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.057"
+      app:layout_constraintHorizontal_bias="0.052"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.346" />
+      app:layout_constraintVertical_bias="0.330" />
 
   <TextView
       android:id="@+id/textView5"
@@ -115,10 +115,10 @@
       android:text="@string/label_transporte"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.057"
+      app:layout_constraintHorizontal_bias="0.052"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.375" />
+      app:layout_constraintVertical_bias="0.359" />
 
   <TextView
       android:id="@+id/textView6"
@@ -131,10 +131,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.921"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.289"
+      app:layout_constraintVertical_bias="0.272"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -148,10 +148,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.921"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.318"
+      app:layout_constraintVertical_bias="0.301"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -165,10 +165,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.921"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.346"
+      app:layout_constraintVertical_bias="0.330"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -182,10 +182,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.921"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.375"
+      app:layout_constraintVertical_bias="0.359"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -198,10 +198,10 @@
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.428"
+      app:layout_constraintHorizontal_bias="0.392"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.263" />
+      app:layout_constraintVertical_bias="0.247" />
 
   <TextView
       android:id="@+id/textView13"
@@ -215,7 +215,7 @@
       app:layout_constraintHorizontal_bias="0.057"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.404" />
+      app:layout_constraintVertical_bias="0.441" />
 
   <TextView
       android:id="@+id/textView14"
@@ -229,7 +229,7 @@
       app:layout_constraintHorizontal_bias="0.057"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.433" />
+      app:layout_constraintVertical_bias="0.471" />
 
   <TextView
       android:id="@+id/textView15"
@@ -243,7 +243,7 @@
       app:layout_constraintHorizontal_bias="0.057"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.462" />
+      app:layout_constraintVertical_bias="0.500"/>
 
   <TextView
       android:id="@+id/textView16"
@@ -257,7 +257,7 @@
       app:layout_constraintHorizontal_bias="0.057"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.491" />
+      app:layout_constraintVertical_bias="0.530" />
 
   <TextView
       android:id="@+id/textView17"
@@ -271,7 +271,7 @@
       app:layout_constraintHorizontal_bias="0.057"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.520" />
+      app:layout_constraintVertical_bias="0.560" />
 
   <TextView
       android:id="@+id/textView18"
@@ -284,10 +284,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.924"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.404"
+      app:layout_constraintVertical_bias="0.441"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -301,10 +301,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.924"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.433"
+      app:layout_constraintVertical_bias="0.471"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -318,10 +318,9 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.924"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.462"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -335,10 +334,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.924"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.491"
+      app:layout_constraintVertical_bias="0.530"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -352,10 +351,10 @@
       android:textSize="11dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.924"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.520"
+      app:layout_constraintVertical_bias="0.560"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -372,7 +371,7 @@
       app:layout_constraintHorizontal_bias="0.057"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.549" />
+      app:layout_constraintVertical_bias="0.590" />
 
   <TextView
       android:id="@+id/textView25"
@@ -386,43 +385,10 @@
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.928"
+      app:layout_constraintHorizontal_bias="0.924"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.549"
-      tools:ignore="TextSizeCheck" />
-
-  <TextView
-      android:id="@+id/textView26"
-      android:layout_width="365dp"
-      android:layout_height="21dp"
-      android:background="@drawable/styles_borde_liquidacion"
-      android:gravity="center"
-      android:text="@string/label_titulo_prestaciones"
-      android:textSize="10dp"
-      android:textStyle="bold"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.428"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.751"
-      tools:ignore="TextSizeCheck" />
-
-  <TextView
-      android:id="@+id/textView27"
-      android:layout_width="365dp"
-      android:layout_height="wrap_content"
-      android:background="@drawable/styles_borde_liquidacion"
-      android:paddingLeft="3dp"
-      android:text="@string/label_explicacion"
-      android:textSize="10dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.428"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.838"
+      app:layout_constraintVertical_bias="0.590"
       tools:ignore="TextSizeCheck" />
 
   <TextView
@@ -430,16 +396,63 @@
       android:layout_width="365dp"
       android:layout_height="wrap_content"
       android:background="@drawable/styles_borde_liquidacion"
+      android:paddingLeft="3dp"
       android:text="@string/_label_nota"
       android:textSize="10dp"
       android:textStyle="italic"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.392"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.642"
+      tools:ignore="TextSizeCheck" />
+
+  <Button
+      android:id="@+id/GuardarLiquidacion"
+      android:layout_width="100dp"
+      android:layout_height="45dp"
+      android:backgroundTint="#4CAF50"
+      android:text="@string/button_guardar_liquidacion"
+      android:textColor="@color/black"
+      app:cornerRadius="15dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.941"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.746"
+      tools:ignore="TouchTargetSizeCheck" />
+
+  <Button
+      android:id="@+id/CancelarLiquidacion"
+      android:layout_width="105dp"
+      android:layout_height="45dp"
+      android:backgroundTint="#F44336"
+      android:text="@string/button_cancelar_liquidacion"
+      android:textColor="@color/black"
+      app:cornerRadius="15dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.569"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.746"
+      tools:ignore="TouchTargetSizeCheck" />
+
+  <TextView
+      android:id="@+id/textView31"
+      android:layout_width="365dp"
+      android:layout_height="wrap_content"
+      android:paddingLeft="2dp"
+      android:text="@string/label_prestaciones_sociales"
+      android:textStyle="bold"
+      android:background="@drawable/styles_borde_liquidacion"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.428"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.581"
-      tools:ignore="TextSizeCheck" />
-
+      app:layout_constraintVertical_bias="0.415" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
