Se hizo evento on click liquidacion

--- a/app/src/main/res/layout/activity_liquidacion_por_dias.xml
+++ b/app/src/main/res/layout/activity_liquidacion_por_dias.xml
@@ -116,8 +116,8 @@
         android:id="@+id/salarioIngresado"
         android:layout_width="169dp"
         android:layout_height="57dp"
-        android:gravity="center"
-        android:text="@string/label_salario"
+        android:paddingTop="10dp"
+        android:text="@string/label_salario_diario"
         android:textColor="@color/black"
         android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +132,7 @@
         android:id="@+id/fechaFinalizacion"
         android:layout_width="169dp"
         android:layout_height="57dp"
-        android:gravity="center"
+        android:paddingTop="10dp"
         android:text="@string/label_fecha_final_liquidar"
         android:textColor="@color/black"
         android:textSize="12dp"
@@ -148,7 +148,7 @@
         android:id="@+id/FechaIngreso"
         android:layout_width="169dp"
         android:layout_height="57dp"
-        android:gravity="center"
+        android:paddingTop="10dp"
         android:text="@string/label_fecha_inicio_liquidar"
         android:textColor="@color/black"
         android:textSize="12dp"
