[CONFIG] se realizan configuraciones generales en el proyecto, se crea el formulario de registro, se configura la funcionalidad de los botones guardar y cancelar en los formularios de liquidación

--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -186,7 +186,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:hint="@string/input_email_empleado"
-            android:inputType="text" />
+            android:inputType="textAutoComplete" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
