--- a/app/src/main/res/layout/activity_planilla_nomina.xml
+++ b/app/src/main/res/layout/activity_planilla_nomina.xml
@@ -142,7 +142,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="100"
+      android:hint="@string/input_dias_trabajados"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -159,7 +159,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="1.300.000"
+      android:hint="@string/input_salario_ingresado"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -176,7 +176,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="162.000"
+      android:hint="@string/input_transporte_mensual"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -278,7 +278,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="426.417"
+      android:hint="@string/input_cesantias"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -295,7 +295,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="14.925"
+      android:hint="@string/input_intereses_Cesantias"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -312,7 +312,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="426.417"
+      android:hint="@string/input_prima_primerS"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -328,7 +328,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="0"
+      android:hint="@string/input_prima_segundoS"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
@@ -345,7 +345,7 @@
       android:layout_width="181dp"
       android:layout_height="23dp"
       android:background="@drawable/styles_borde_liquidacion"
-      android:hint="189.583"
+      android:hint="@string/input_vacaciones"
       android:paddingLeft="3dp"
       android:paddingTop="3dp"
       android:textSize="11dp"
