--- a/app/src/main/res/layout/activity_area.xml
+++ b/app/src/main/res/layout/activity_area.xml
@@ -41,7 +41,7 @@
         android:id="@+id/GuardarEmpleado"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_guardar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -57,7 +57,7 @@
         android:id="@+id/CancelarEmpleado"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/red_borrar"
         android:text="@string/button_cancelar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -73,7 +73,7 @@
         android:id="@+id/EditarEmpleado"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:backgroundTint="#2196F3"
+        android:backgroundTint="@color/blue_editar"
         android:text="@string/button_editar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -89,7 +89,7 @@
         android:id="@+id/BorrarEmpleado"
         android:layout_width="102dp"
         android:layout_height="44dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/red_borrar"
         android:text="@string/button_borrar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -105,7 +105,7 @@
         android:id="@+id/EstadoEmpleado"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:backgroundTint="#FFC107"
+        android:backgroundTint="@color/amarrillo_estado"
         android:text="@string/button_activar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
