--- a/app/src/main/res/layout/activity_liquidacion_por_dias.xml
+++ b/app/src/main/res/layout/activity_liquidacion_por_dias.xml
@@ -15,7 +15,7 @@
         android:id="@+id/liquidacionEmpleador"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#FF5722"
+        android:backgroundTint="#FF8660"
         android:text="@string/button_liquidacion_para_empleador"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -31,7 +31,7 @@
         android:id="@+id/liquidacionEmpleado"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#FF9800"
+        android:backgroundTint="#FFB649"
         android:text="@string/button_liquidacion_para_empleado"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -164,7 +164,7 @@
         android:id="@+id/botonPorDias"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#612196F3"
+        android:backgroundTint="@color/blue_editar"
         android:text="@string/button_liquidacion_por_dias"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -186,7 +186,7 @@
         android:textColor="@color/black"
         android:textColorHint="#151414"
         android:textColorLink="#0E0D0D"
-        android:backgroundTint="#68B26B"
+        android:backgroundTint="@color/verde_guardar"
         android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -321,7 +321,7 @@
         android:id="@+id/GuardarLiquidacion"
         android:layout_width="100dp"
         android:layout_height="45dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_guardar_liquidacion"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -337,7 +337,7 @@
         android:id="@+id/CancelarLiquidacion"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/red_borrar"
         android:text="@string/button_cancelar_liquidacion"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
