--- a/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
+++ b/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
@@ -15,7 +15,7 @@
         android:id="@+id/botonTiempoCompleto"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#7C68B26B"
+        android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_liquidacion_tiempo_completo"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -37,7 +37,7 @@
         android:layout_height="55dp"
         android:text="@string/button_liquidacion_por_dias"
         android:textColor="@color/black"
-        android:backgroundTint="#2196F3"
+        android:backgroundTint="@color/blue_editar"
         android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -214,7 +214,7 @@
         android:id="@+id/liquidacionEmpleado"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#FF9800"
+        android:backgroundTint="#FFB649"
         android:text="@string/button_liquidacion_para_empleado"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -229,7 +229,7 @@
         android:id="@+id/liquidacionEmpleador"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#FF5722"
+        android:backgroundTint="#FF8660"
         android:text="@string/button_liquidacion_para_empleador"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -287,7 +287,7 @@
         android:id="@+id/GuardarLiquidacion"
         android:layout_width="100dp"
         android:layout_height="45dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_guardar_liquidacion"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -303,7 +303,7 @@
         android:id="@+id/CancelarLiquidacion"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/red_borrar"
         android:text="@string/button_cancelar_liquidacion"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
