--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
         android:id="@+id/ButtonIngresar"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#049947"
+        android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_ingresar"
         android:textColor="@color/black"
         android:textFontWeight="@integer/material_motion_duration_long_2"
