--- a/app/src/main/res/layout/activity_planilla_nomina.xml
+++ b/app/src/main/res/layout/activity_planilla_nomina.xml
@@ -412,7 +412,7 @@
       android:id="@+id/GuardarLiquidacion"
       android:layout_width="100dp"
       android:layout_height="45dp"
-      android:backgroundTint="#4CAF50"
+      android:backgroundTint="@color/verde_guardar"
       android:text="@string/button_guardar_liquidacion"
       android:textColor="@color/black"
       app:cornerRadius="15dp"
@@ -428,7 +428,7 @@
       android:id="@+id/CancelarLiquidacion"
       android:layout_width="105dp"
       android:layout_height="45dp"
-      android:backgroundTint="#F44336"
+      android:backgroundTint="@color/red_borrar"
       android:text="@string/button_cancelar_liquidacion"
       android:textColor="@color/black"
       app:cornerRadius="15dp"
