--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -41,7 +41,7 @@
         android:id="@+id/GuardarEmpleado"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_guardar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -57,7 +57,7 @@
         android:id="@+id/CancelarEmpleado"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/red_borrar"
         android:text="@string/button_cancelar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -73,7 +73,7 @@
         android:id="@+id/EditarEmpleado"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:backgroundTint="#2196F3"
+        android:backgroundTint="@color/blue_editar"
         android:text="@string/button_editar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -89,7 +89,7 @@
         android:id="@+id/BorrarEmpleado"
         android:layout_width="102dp"
         android:layout_height="44dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/red_borrar"
         android:text="@string/button_borrar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -105,7 +105,7 @@
         android:id="@+id/EstadoEmpleado"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:backgroundTint="#FFC107"
+        android:backgroundTint="@color/amarrillo_estado"
         android:text="@string/button_activar"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
@@ -208,24 +208,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.420">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_area_empleado"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_area_empleado"
-            android:inputType="textCapSentences" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -244,6 +226,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout4"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -317,6 +300,19 @@
             android:hint="@string/input_contrasena_empleado"
             android:inputType="numberPassword" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Spinner
+        android:id="@+id/lista_areas_empleado"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/black"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.423" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
