--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,7 +23,7 @@
         android:importantForAccessibility="no" />
 
     <TextView
-        android:id="@+id/LabelUsuario"
+        android:id="@+id/textViewUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nombre_usuario"
