--- a/app/src/main/res/layout/activity_restaurar_contrasena.xml
+++ b/app/src/main/res/layout/activity_restaurar_contrasena.xml
@@ -95,7 +95,7 @@
 
     <Button
         android:id="@+id/ButtonEnviar"
-        android:layout_width="250dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/verde_guardar"
         android:text="@string/button_restablecer_contrasena"
@@ -104,7 +104,24 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.667"
+        tools:ignore="SpUsage,TextSizeCheck,UnusedAttribute" />
+
+    <Button
+        android:id="@+id/ButtonValidacionCorreo"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue_editar"
+        android:text="@string/input_validacion_correo_electronico"
+        android:textColor="@color/black"
+        android:textFontWeight="@integer/material_motion_duration_long_2"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.139"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.667"
