--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -218,7 +218,7 @@
         app:layout_constraintVertical_bias="0.510">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_tipo_contrato_empleado"
+            android:id="@+id/input_salario_empleado"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:hint="@string/input_salario_empleado"
@@ -237,7 +237,7 @@
         app:layout_constraintVertical_bias="0.420">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_tipo_salario_empleado"
+            android:id="@+id/input_tipo_contrato_empleado_empleado"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:hint="@string/input_tipo_contrato_empleado"
@@ -258,7 +258,25 @@
         app:layout_constraintVertical_bias="0.510">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_rol_empleado"
+            android:id="@+id/input_id_empledo"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/input_id_empleado"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.050"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.600">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_contrasena_empleado"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:hint="@string/input_contrasena_empleado"
